--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "exude",
+    "name": "@captison/exude",
     "version": "0.0.1",
     "description": "UI Component Library",
     "title": "Exude UI",
@@ -25,7 +25,7 @@
         "babel-plugin-import-glob": "^2.0.0",
         "chalk": "^4.1.2",
         "cross-env": "^7.0.3",
-        "jest": "^28.1.1",
+        "jest": "^29.4.2",
         "js-beautify": "^1.14.0",
         "mini-html-webpack-plugin": "^3.1.3",
         "raw-loader": "^4.0.2",
@@ -34,7 +34,7 @@
         "vue-loader": "^15.9.8",
         "vue-styleguidist": "^4.45.2",
         "vue-template-compiler": "^2.6.14",
-        "webpack": "^4.46.0"
+        "webpack": "^5.75.0"
     },
     "peerDependencies":
     {
@@ -51,5 +51,10 @@
         "resize-observer-polyfill": "^1.5.1",
         "string-hash": "^1.1.3",
         "vue-frag": "^1.4.0"
+    },
+    "repository":
+    {
+        "type": "git",
+        "url": "https://github.com/Captison/exude.git"
     }
 }
