--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "deepmerge": "^4.2.2",
         "object-path": "^0.11.8",
         "object-path-immutable": "^4.1.2",
+        "qrcode-svg-ts": "^1.4.0",
         "resize-observer-polyfill": "^1.5.1",
         "string-hash": "^1.1.3",
         "vue-frag": "^1.4.0"
