--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "main": "dist/exude.js",
     "taskFiles": [
         "build/tasks.js",
+        "form/tasks.js",
         "guide/tasks.js",
         "test/tasks.js"
     ],
@@ -18,15 +19,18 @@
     "devDependencies":
     {
         "@babel/core": "^7.17.5",
-        "@babel/preset-env": "^7.16.11",
+        "@babel/eslint-parser": "^7.22.9",
+        "@babel/preset-env": "^7.22.9",
         "@vue/compiler-sfc": "^3.2.31",
         "babel-jest": "^28.1.1",
         "babel-loader": "^8.2.3",
         "babel-plugin-import-glob": "^2.0.0",
         "chalk": "^4.1.2",
         "cross-env": "^7.0.3",
+        "eslint": "^8.46.0",
+        "eslint-plugin-vue": "^9.16.1",
         "jest": "^29.4.2",
-        "js-beautify": "^1.14.0",
+        "js-beautify": "^1.14.9",
         "mini-html-webpack-plugin": "^3.1.3",
         "raw-loader": "^4.0.2",
         "vue": "^2.6.14",
@@ -34,7 +38,7 @@
         "vue-loader": "^15.9.8",
         "vue-styleguidist": "^4.45.2",
         "vue-template-compiler": "^2.6.14",
-        "webpack": "^5.75.0"
+        "webpack": "^5.88.2"
     },
     "peerDependencies":
     {
