--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,24 +29,24 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # - name: Build
-      #   run: node task build-prod
+      - name: Build
+        run: node task build-prod
 
       # TODO: tests to run here
       
-      # - name: Publish to github packages
-      #   run: npm publish --dry-run
-      #   working-directory: ./dist
-      #   env:
-      #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to github packages
+        run: npm publish --dry-run
+        working-directory: ./dist
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate styleguide
-        run: node task build-guide
-
-      - name: Deploy styleguide
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: styleguide-deployed
-          FOLDER: docs
+      # - name: Generate styleguide
+      #   run: node task build-guide
+      # 
+      # - name: Deploy styleguide
+      #   uses: JamesIves/github-pages-deploy-action@releases/v3
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     BRANCH: styleguide-deployed
+      #     FOLDER: docs
     
