--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@captison/exude",
     "version": "0.0.1",
-    "description": "UI Component Library",
+    "description": "Vue UI Component Library",
     "title": "Exude UI",
     "author": "Captison Method",
     "license": "UNLICENSED",
@@ -28,6 +28,7 @@
         "cross-env": "^7.0.3",
         "eslint": "^8.46.0",
         "eslint-plugin-vue": "^9.16.1",
+        "generate-json-webpack-plugin": "^2.0.0",
         "jest": "^29.4.2",
         "js-beautify": "^1.14.9",
         "mini-html-webpack-plugin": "^3.1.3",
