--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,7 +27,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
       
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: Build
         run: node task build-prod
