--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,7 +33,10 @@ jobs:
         run: node task build-prod
 
       # TODO: tests to run here
-      
+
+      - name: Config npm for github registry
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/dist/.npmrc      
+        
       - name: Publish to github packages
         run: npm publish --dry-run
         working-directory: ./dist
