--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,8 +35,9 @@ jobs:
       # TODO: tests to run here
 
       - name: Config npm for github registry
-        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/dist/.npmrc      
-        
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc      
+        working-directory: ./dist
+
       - name: Publish to github packages
         run: npm publish --dry-run
         working-directory: ./dist
