--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@Captison:registry=https://npm.pkg.github.com
+registry=https://npm.pkg.github.com/Captison
+//npm.pkg.github.com/:_authToken=${GITHUB_READ_TOKEN}
