--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@captison/exude",
-    "version": "0.0.3",
-    "description": "Vue UI Component Library",
+    "version": "0.0.4",
+    "description": "Vue 2 UI Component Library",
     "title": "Exude UI",
     "author": "Captison Method",
     "license": "UNLICENSED",
